# sofia-sip

./: .gitmodules  CMakeLists.txt  Makefile.am  autogen.sh  configure_command.sh.in
libsofia-sip-ua/msg/sofia-sip/: msg_parser.h
libsofia-sip-ua/su/: Makefile.am  su_os_nw.c
libsofia-sip-ua/tport/: tport_tls.c  tport_tls.h  tport_type_tls.c
